--- a/STAT414_Project.Rmd
+++ b/STAT414_Project.Rmd
@@ -1,9 +1,14 @@
 ---
 title: "STAT 414 Project"
-subtitle: "Franchesca garcia and Isha Nayak"
+subtitle: "Franchesca Garcia and Isha Nayak"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+library(lme4)
+```
+
+```{r}
+
 ```
