--- a/STAT414_Project.Rmd
+++ b/STAT414_Project.Rmd
@@ -6,7 +6,9 @@ output: html_document
 
 ```{r setup, include=FALSE}
 library(tidyverse)
+library(nlme)
 library(lme4)
+library(performance)
 ```
 
 ```{r loading data}
@@ -27,58 +29,58 @@ obesity <- read.csv("stat414_project_data/obesity.csv")
 ```{r cleaning data}
 
 # transforming DALY data to long format
-daly_clean <- daly |>
+daly <- daly |>
   pivot_longer(cols = 2:186, names_to = "country", values_to = "DALY") |>
   rename (year = Yeaer)
 
 # selecting relevant columns for each variable's dataframe
-alcohol_clean <- alcohol |>
+alcohol <- alcohol |>
   select(ParentLocation, Location, Period, FactValueNumeric) |>
   rename(region = ParentLocation, country = Location, year = Period, alcohol = FactValueNumeric)
 
-bloodGlucose_clean <- bloodGlucose |>
+bloodGlucose <- bloodGlucose |>
   select(Location, FactValueNumeric) |>
   rename(country = Location, bloodGlucose = FactValueNumeric)
 
-cholesterol_clean <- cholesterol |>
+cholesterol <- cholesterol |>
   select(Location, Period, FactValueNumeric) |>
   rename(country = Location, year = Period, cholesterol = FactValueNumeric)
-cholesterol_clean$year[cholesterol_clean$year == 2018] <- 2020
+cholesterol$year[cholesterol$year == 2018] <- 2020
 
-depression_clean <- depression |>
+depression <- depression |>
   select(Location, FactValueNumeric) |>
   rename(country = Location, depression = FactValueNumeric)
 
-finePartMatter_clean <- finePartMatter |>
+finePartMatter <- finePartMatter |>
   select(Location, Period, FactValueNumeric) |>
   rename(country = Location, year = Period, PM2.5 = FactValueNumeric)
-finePartMatter_clean$year[finePartMatter_clean$year == 2018] <- 2020
+finePartMatter$year[finePartMatter$year == 2018] <- 2020
 
-hypertension_clean <- hypertension |>
+hypertension <- hypertension |>
   select(Location, Period, FactValueNumeric) |>
   rename(country = Location, year = Period, hypertension = FactValueNumeric) |>
   filter(year == c(2019, 2015, 2010))
-hypertension_clean$year[hypertension_clean$year == 2019] <- 2020
+hypertension$year[hypertension$year == 2019] <- 2020
 
-obesity_clean <- obesity |>
+obesity <- obesity |>
   select(Location, Period, FactValueNumeric) |>
   rename(country = Location, year = Period, obesity = FactValueNumeric)
 
-physicalActivity_clean <- physicalActivity |>
+physicalActivity <- physicalActivity |>
   select(Location, Period, FactValueNumeric) |>
   rename(country = Location, year = Period, inactivity = FactValueNumeric)
 
 
 # combining dataframes
-alzheimers <- daly_clean |>
-  inner_join(alcohol_clean, by = c("year", "country")) |>
-  inner_join(bloodGlucose_clean, by = "country") |>
-  inner_join(cholesterol_clean, by = c("year", "country")) |>
-  inner_join(depression_clean, by = "country") |>
-  inner_join(finePartMatter_clean, by = c("year", "country")) |>
-  inner_join(hypertension_clean, by = c("year", "country")) |>
-  inner_join(obesity_clean, by = c("year", "country")) |>
-  inner_join(physicalActivity_clean, by = c("year", "country"))
+alzheimers <- daly |>
+  inner_join(alcohol, by = c("year", "country")) |>
+  inner_join(bloodGlucose, by = "country") |>
+  inner_join(cholesterol, by = c("year", "country")) |>
+  inner_join(depression, by = "country") |>
+  inner_join(finePartMatter, by = c("year", "country")) |>
+  inner_join(hypertension, by = c("year", "country")) |>
+  inner_join(obesity, by = c("year", "country")) |>
+  inner_join(physicalActivity, by = c("year", "country"))
 
 ```
 
@@ -103,102 +105,93 @@ region_sd =
     summarize(region_daly = sd(DALY)) 
 
 
+
 #summary output for alcohol on DALY
 model_alcohol= 
   lm(alzheimers$DALY ~ alzheimers$alcohol)
-
 summary(model_alcohol)
 
 #summary output for bloodGlucose on DALY
 model_bloodGlucose= 
   lm(alzheimers$DALY ~ alzheimers$bloodGlucose)
-
 summary(model_bloodGlucose)
   
-
 #summary output for cholesterol on DALY
 model_cholesterol= 
   lm(alzheimers$DALY ~ alzheimers$cholesterol)
-
 summary(model_cholesterol)
-
 
 #summary output for depression on DALY
 model_depression= 
   lm(alzheimers$DALY ~ alzheimers$depression)
-
 summary(model_depression)
 
 #summary output for PM2.5 on DALY
 model_PM2.5 = 
   lm(alzheimers$DALY ~ alzheimers$PM2.5)
-
 summary(model_PM2.5)
 
 #summary output for hypertension on DALY
 model_hypertension = 
   lm(alzheimers$DALY ~ alzheimers$hypertension) 
-
 summary(model_hypertension)
-
 
 #summary output for obesity on DALY
 model_obesity = 
   lm(alzheimers$DALY ~ alzheimers$obesity)
-
 summary(model_obesity)
 
 #summary output for inactivity on DALY
 model_inactivity = 
   lm(alzheimers$DALY ~ alzheimers$inactivity)
-
 summary(model_inactivity)
 ```
 ```{r visual data exploration}
 alzheimers |>
   filter(DALY < 2000) |>
   ggplot() +
-    geom_point(aes(x = alcohol, y = DALY))
+    geom_point(aes(x = alcohol, y = DALY, colour = as.factor(year)))
 
 alzheimers |>
   filter(DALY < 2000) |>
   ggplot() +
-    geom_point(aes(x = bloodGlucose, y = DALY))
+    geom_point(aes(x = bloodGlucose, y = DALY, colour = as.factor(year)))
 
 alzheimers |>
   filter(DALY < 2000) |>
   ggplot() +
-    geom_point(aes(x = cholesterol, y = DALY))
+    geom_point(aes(x = cholesterol, y = DALY, colour = as.factor(year)))
 
 alzheimers |>
   filter(DALY < 2000) |>
   ggplot() +
-    geom_point(aes(x = depression, y = DALY))
+    geom_point(aes(x = depression, y = DALY, colour = as.factor(year)))
 
 alzheimers |>
   filter(DALY < 2000) |>
   ggplot() +
-    geom_point(aes(x = PM2.5, y = DALY))
+    geom_point(aes(x = PM2.5, y = DALY, colour = as.factor(year)))
 
 alzheimers |>
   filter(DALY < 2000) |>
   ggplot() +
-    geom_point(aes(x = hypertension, y = DALY))
+    geom_point(aes(x = hypertension, y = DALY, colour = as.factor(year)))
 
 alzheimers |>
   filter(DALY < 2000) |>
   ggplot() +
-    geom_point(aes(x = obesity, y = DALY))
+    geom_point(aes(x = obesity, y = DALY, colour = as.factor(year)))
 
 alzheimers |>
   filter(DALY < 1000) |>
   ggplot() +
-    geom_point(aes(x = inactivity, y = DALY))
+    geom_point(aes(x = inactivity, y = DALY, colour = as.factor(year)))
 
 alzheimers |>
   filter(DALY < 1000) |>
   group_by(region) |>
-  summarize(region_daly = mean(DALY)) |>
+  summarize(region_daly = mean(DALY, colour = as.factor(year))) |>
   ggplot() +
     geom_bar(aes(x = region, y = region_daly), stat = "identity")
 ```
+
