--- a/project.Rmd
+++ b/project.Rmd
@@ -54,6 +54,8 @@ inactivity <- inactivity |>
   mutate(cenInactivity = inactivity - mean(inactivity))
 
 hypertension <- hypertension |>
+  filter(Dim1 == "Both sexes",
+        IndicatorCode == "NCD_HYP_PREVALENCE_A") |>
   select(Location, FactValueNumeric, Period) |>
   rename(country = Location, year = Period, hypertension = FactValueNumeric) |>
   mutate(cenHypertension = hypertension - mean(hypertension))
@@ -82,7 +84,7 @@ alzheimers <- daly |>
   # removing South Sudan because it is missing values for Alcohol
   filter(country != "South Sudan") |>
   
-  # Log tranformation on DALY b/c of nonlinearity & fanning of residuals of final model
+  # log tranformation on DALY b/c of nonlinearity & fanning of residuals of final model
   mutate(logDALY = log(DALY)) |>
   mutate(cenLogDALY = logDALY - mean(logDALY)) 
 
@@ -100,36 +102,90 @@ pairs(alzheimers[, c("cenLogDALY",
                      "cenOverweight")],
       cex = 0.2)
 
+# notice correlation between Obesity and Overweight, Inactivity, and Hypertension
+
 ```
 
 
 ```{r visual data exploration}
 
-# scatter plot of DALY by Alcohol with smooth lines
-# still trying to make easier to read...
+# assigning colors to Regions
+region_colors <- c(
+  "Africa" = "#9B59B6", 
+  "Americas" = "#FF6347",
+  "Eastern Mediterranean" = "#FFD700",
+  "Europe" = "#4682B4",
+  "South-East Asia" = "#228B22",
+  "Western Pacific" = "#40E0D0"
+)
+
+
+
+# scatter plot of DALY by Alcohol
 alzheimers |>
   ggplot() +
-    geom_point(aes(x = cenAlcohol, y = cenLogDALY, colour = region)) +
-    geom_smooth(aes(x = cenAlcohol, y = cenLogDALY, group = region, 
-                    colour = region),
-                method = "lm",
-                se = FALSE,     
-                linewidth = 0.8,
-                color = "grey25") + 
-    scale_color_brewer(palette = "Set2") +  
-    theme_bw() +
+    geom_point(aes(x = alcohol, y = DALY, colour = region),
+                alpha = 1, stroke = FALSE, size = 1.5) +
+    scale_color_manual(values = region_colors) + 
+    theme_minimal() +
+    labs(title = "How does a country's burden of dementias relate to ",
+         x = "Alcohol Consumption",
+         y = "DALY",
+         colour = "Region", 
+         linetype = "Region") 
+
+# scatter plots of DALY by Alcohol seperated by Region
+alzheimers |>
+  ggplot() +
+    geom_point(aes(x = alcohol, y = DALY, colour = region),
+                alpha = 1, stroke = FALSE, size = 1, show.legend = FALSE) +
+    scale_color_manual(values = region_colors) + 
+    facet_wrap(~ region) + 
+    theme_minimal() +
     labs(title = "DALY of Dementias by Alcohol Harmful Consumption",
          x = "Alcohol Consumption",
          y = "DALY",
          colour = "Region", 
          linetype = "Region") 
 
+
+
+# scatter plot of DALY by Obesity
 alzheimers |>
   ggplot() +
-    geom_point(aes(x = region, y = cenLogDALY)) +
-    geom_smooth(aes(x = region, y = cenLogDALY)) 
+    geom_point(aes(x = obesity, y = DALY, colour = region),
+                alpha = 1, stroke = FALSE, size = 1.5) +
+    scale_color_manual(values = region_colors) + 
+    theme_minimal() +
+    labs(title = "DALY of Dementias by Obesity",
+         x = "Obesity",
+         y = "DALY",
+         colour = "Region", 
+         linetype = "Region") 
 
-# will make scatter plots for other variables too 
+# scatter plots of DALY by Obesity seperated by Region
+alzheimers |>
+  ggplot() +
+    geom_point(aes(x = obesity, y = DALY, colour = region),
+                alpha = 1, stroke = FALSE, size = 1, show.legend = FALSE) +
+    scale_color_manual(values = region_colors) + 
+    facet_wrap(~ region) + 
+    theme_minimal() +
+    labs(title = "DALY of Dementias by Obesity",
+         x = "Obesity",
+         y = "DALY",
+         colour = "Region", 
+         linetype = "Region") 
+
+
+alzheimers |>
+  ggplot() +
+    geom_point(aes(x = region, y = DALY, color = region), show.legend = FALSE) +
+    scale_color_manual(values = region_colors) +
+    theme_minimal() +
+    labs(title = "DALY of Dementias by Region",
+         x = "Region",
+         y = "DALY") 
 
 ```
 
@@ -204,9 +260,39 @@ qqline(residuals(final_model), col = "red")
 # Histogram
 hist(residuals(final_model), main = "Histogram of Residuals", xlab = "Residuals")
 
-# Effects Plot?
-#plot(allEffects(final_model))
+# Interaction Plot for Alcohol
+predicted_Ainteraction <- ggpredict(final_model, terms = c("cenAlcohol", "region"))
+plot(predicted_Ainteraction) +
+  labs(title = "Interaction between Obesity and Region",
+       x = "Centered Obesity",
+       y = "Predicted DALY") +
+  theme_minimal()
 
-# Leverage Plot?
+predicted_Ainteraction$predicted <- exp(predicted_Ainteraction$predicted);
+predicted_Ainteraction$conf.low <- exp(predicted_Ainteraction$conf.low); predicted_Ainteraction$conf.high <- exp(predicted_Ainteraction$conf.high);
+plot(predicted_Ainteraction) +
+  labs(title = "Interaction between Alcohol and Region",
+       x = "Centered Alcohol",
+       y = "Predicted DALY") +
+  theme_minimal()
+
+# Interaction Plot for Obesity
+predicted_Ointeraction <- ggpredict(final_model, terms = c("cenObesity", "region"))
+plot(predicted_Ointeraction) +
+  labs(title = "Interaction between cenObesity and Region",
+       x = "Centered Obesity",
+       y = "Predicted DALY") +
+  theme_minimal()
+
+# Back-transformed
+predicted_Ointeraction$predicted <- exp(predicted_Ointeraction$predicted);
+predicted_Ointeraction$conf.low <- exp(predicted_Ointeraction$conf.low); predicted_Ointeraction$conf.high <- exp(predicted_Ointeraction$conf.high);
+plot(predicted_Ointeraction) +
+  labs(title = "Interaction between Obesity and Region",
+       x = "Centered Alcohol",
+       y = "Predicted DALY") +
+  theme_minimal()
 
 ```
+
+
